// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`関数 1 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Function\\": [
      {
        \\"name\\": \\"Function\\",
        \\"children\\": {
          \\"FunctionToken\\": [
            {
              \\"image\\": \\"function\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 12,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 28,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 28,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"FunctionNameToken\\": [
            {
              \\"image\\": \\"myFunc(\\",
              \\"startOffset\\": 14,
              \\"endOffset\\": 20,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 14,
              \\"endColumn\\": 20,
              \\"tokenTypeIdx\\": 39,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionNameToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 39,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"arguments\\": [
            {
              \\"name\\": \\"FunctionAugments\\",
              \\"children\\": {}
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 21,
              \\"endOffset\\": 21,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 21,
              \\"endColumn\\": 21,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 23,
              \\"endOffset\\": 23,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 23,
              \\"endColumn\\": 23,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"Program\\": [
            {
              \\"name\\": \\"Program\\",
              \\"children\\": {
                \\"Assignment\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 31,
                                                              \\"endOffset\\": 31,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 7,
                                                              \\"endColumn\\": 7,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 35,
                                                              \\"endOffset\\": 35,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 11,
                                                              \\"endColumn\\": 11,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 33,
                                                  \\"endOffset\\": 33,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 17,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 16,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          17,
                                                          18
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"17\\": true,
                                                          \\"18\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 17,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 41,
              \\"endOffset\\": 41,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`関数 2 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Function\\": [
      {
        \\"name\\": \\"Function\\",
        \\"children\\": {
          \\"FunctionToken\\": [
            {
              \\"image\\": \\"function\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 12,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 28,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 28,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"FunctionNameToken\\": [
            {
              \\"image\\": \\"add(\\",
              \\"startOffset\\": 14,
              \\"endOffset\\": 17,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 14,
              \\"endColumn\\": 17,
              \\"tokenTypeIdx\\": 39,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionNameToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 39,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"arguments\\": [
            {
              \\"name\\": \\"FunctionAugments\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"x\\",
                    \\"startOffset\\": 18,
                    \\"endOffset\\": 18,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 18,
                    \\"endColumn\\": 18,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  },
                  {
                    \\"image\\": \\"y\\",
                    \\"startOffset\\": 21,
                    \\"endOffset\\": 21,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 21,
                    \\"endColumn\\": 21,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"Comma\\": [
                  {
                    \\"image\\": \\",\\",
                    \\"startOffset\\": 19,
                    \\"endOffset\\": 19,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 19,
                    \\"endColumn\\": 19,
                    \\"tokenTypeIdx\\": 15,
                    \\"tokenType\\": {
                      \\"name\\": \\"Comma\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 15,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 22,
              \\"endOffset\\": 22,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 22,
              \\"endColumn\\": 22,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 24,
              \\"endOffset\\": 24,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 24,
              \\"endColumn\\": 24,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"Program\\": [
            {
              \\"name\\": \\"Program\\",
              \\"children\\": {
                \\"ReturnStatement\\": [
                  {
                    \\"name\\": \\"ReturnStatement\\",
                    \\"children\\": {
                      \\"ReturnToken\\": [
                        {
                          \\"image\\": \\"return\\",
                          \\"startOffset\\": 32,
                          \\"endOffset\\": 37,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 37,
                          \\"tokenType\\": {
                            \\"name\\": \\"ReturnToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 37,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"return\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"x\\",
                                                  \\"startOffset\\": 39,
                                                  \\"endOffset\\": 39,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 14,
                                                  \\"endColumn\\": 14,
                                                  \\"tokenTypeIdx\\": 8,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 8,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"y\\",
                                                  \\"startOffset\\": 43,
                                                  \\"endOffset\\": 43,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 18,
                                                  \\"endColumn\\": 18,
                                                  \\"tokenTypeIdx\\": 8,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 8,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 41,
                                      \\"endOffset\\": 41,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 16,
                                      \\"endColumn\\": 16,
                                      \\"tokenTypeIdx\\": 17,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 16,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              17,
                                              18
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"17\\": true,
                                              \\"18\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 17,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 49,
              \\"endOffset\\": 49,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`関数 3 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Function\\": [
      {
        \\"name\\": \\"Function\\",
        \\"children\\": {
          \\"FunctionToken\\": [
            {
              \\"image\\": \\"function\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 12,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 28,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 28,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"FunctionNameToken\\": [
            {
              \\"image\\": \\"func(\\",
              \\"startOffset\\": 14,
              \\"endOffset\\": 18,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 14,
              \\"endColumn\\": 18,
              \\"tokenTypeIdx\\": 39,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionNameToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 39,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"arguments\\": [
            {
              \\"name\\": \\"FunctionAugments\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"x\\",
                    \\"startOffset\\": 19,
                    \\"endOffset\\": 19,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 19,
                    \\"endColumn\\": 19,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  },
                  {
                    \\"image\\": \\"y\\",
                    \\"startOffset\\": 22,
                    \\"endOffset\\": 22,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 22,
                    \\"endColumn\\": 22,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"Comma\\": [
                  {
                    \\"image\\": \\",\\",
                    \\"startOffset\\": 20,
                    \\"endOffset\\": 20,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 20,
                    \\"endColumn\\": 20,
                    \\"tokenTypeIdx\\": 15,
                    \\"tokenType\\": {
                      \\"name\\": \\"Comma\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 15,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 23,
              \\"endOffset\\": 23,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 23,
              \\"endColumn\\": 23,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 25,
              \\"endOffset\\": 25,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 25,
              \\"endColumn\\": 25,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"Program\\": [
            {
              \\"name\\": \\"Program\\",
              \\"children\\": {
                \\"Assignment\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToLeft\\": [
                        {
                          \\"name\\": \\"ToLeft\\",
                          \\"children\\": {
                            \\"to\\": [
                              {
                                \\"image\\": \\"value\\",
                                \\"startOffset\\": 33,
                                \\"endOffset\\": 37,
                                \\"startLine\\": 3,
                                \\"endLine\\": 3,
                                \\"startColumn\\": 7,
                                \\"endColumn\\": 11,
                                \\"tokenTypeIdx\\": 8,
                                \\"tokenType\\": {
                                  \\"name\\": \\"Identifier\\",
                                  \\"PATTERN\\": {},
                                  \\"tokenTypeIdx\\": 8,
                                  \\"CATEGORIES\\": [],
                                  \\"categoryMatches\\": [],
                                  \\"categoryMatchesMap\\": {},
                                  \\"isParent\\": false
                                }
                              }
                            ],
                            \\"ToLeftToken\\": [
                              {
                                \\"image\\": \\"<-\\",
                                \\"startOffset\\": 39,
                                \\"endOffset\\": 40,
                                \\"startLine\\": 3,
                                \\"endLine\\": 3,
                                \\"startColumn\\": 13,
                                \\"endColumn\\": 14,
                                \\"tokenTypeIdx\\": 36,
                                \\"tokenType\\": {
                                  \\"name\\": \\"ToLeftToken\\",
                                  \\"PATTERN\\": {},
                                  \\"tokenTypeIdx\\": 36,
                                  \\"CATEGORIES\\": [],
                                  \\"categoryMatches\\": [],
                                  \\"categoryMatchesMap\\": {},
                                  \\"isParent\\": false
                                }
                              }
                            ],
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"x\\",
                                                              \\"startOffset\\": 42,
                                                              \\"endOffset\\": 42,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 16,
                                                              \\"endColumn\\": 16,
                                                              \\"tokenTypeIdx\\": 8,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 8,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"y\\",
                                                              \\"startOffset\\": 46,
                                                              \\"endOffset\\": 46,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 20,
                                                              \\"endColumn\\": 20,
                                                              \\"tokenTypeIdx\\": 8,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 8,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"NumberLiteral\\": [
                                                            {
                                                              \\"image\\": \\"1\\",
                                                              \\"startOffset\\": 50,
                                                              \\"endOffset\\": 50,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 24,
                                                              \\"endColumn\\": 24,
                                                              \\"tokenTypeIdx\\": 4,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"NumberLiteral\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 4,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"AdditionOperator\\": [
                                                {
                                                  \\"image\\": \\"-\\",
                                                  \\"startOffset\\": 44,
                                                  \\"endOffset\\": 44,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 18,
                                                  \\"endColumn\\": 18,
                                                  \\"tokenTypeIdx\\": 18,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Minus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 16,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          17,
                                                          18
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"17\\": true,
                                                          \\"18\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 18,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                },
                                                {
                                                  \\"image\\": \\"+\\",
                                                  \\"startOffset\\": 48,
                                                  \\"endOffset\\": 48,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 22,
                                                  \\"endColumn\\": 22,
                                                  \\"tokenTypeIdx\\": 17,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Plus\\",
                                                    \\"PATTERN\\": {},
                                                    \\"CATEGORIES\\": [
                                                      {
                                                        \\"name\\": \\"AdditionOperator\\",
                                                        \\"PATTERN\\": {},
                                                        \\"tokenTypeIdx\\": 16,
                                                        \\"CATEGORIES\\": [],
                                                        \\"categoryMatches\\": [
                                                          17,
                                                          18
                                                        ],
                                                        \\"categoryMatchesMap\\": {
                                                          \\"17\\": true,
                                                          \\"18\\": true
                                                        },
                                                        \\"isParent\\": true
                                                      }
                                                    ],
                                                    \\"tokenTypeIdx\\": 17,
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ],
                \\"ReturnStatement\\": [
                  {
                    \\"name\\": \\"ReturnStatement\\",
                    \\"children\\": {
                      \\"ReturnToken\\": [
                        {
                          \\"image\\": \\"return\\",
                          \\"startOffset\\": 58,
                          \\"endOffset\\": 63,
                          \\"startLine\\": 4,
                          \\"endLine\\": 4,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 37,
                          \\"tokenType\\": {
                            \\"name\\": \\"ReturnToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 37,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"return\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"value\\",
                                                  \\"startOffset\\": 65,
                                                  \\"endOffset\\": 69,
                                                  \\"startLine\\": 4,
                                                  \\"endLine\\": 4,
                                                  \\"startColumn\\": 14,
                                                  \\"endColumn\\": 18,
                                                  \\"tokenTypeIdx\\": 8,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 8,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 75,
              \\"endOffset\\": 75,
              \\"startLine\\": 5,
              \\"endLine\\": 5,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`関数 4 pipe 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Function\\": [
      {
        \\"name\\": \\"Function\\",
        \\"children\\": {
          \\"FunctionToken\\": [
            {
              \\"image\\": \\"function\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 12,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 28,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 28,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"FunctionNameToken\\": [
            {
              \\"image\\": \\"out(\\",
              \\"startOffset\\": 14,
              \\"endOffset\\": 17,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 14,
              \\"endColumn\\": 17,
              \\"tokenTypeIdx\\": 39,
              \\"tokenType\\": {
                \\"name\\": \\"FunctionNameToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 39,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"arguments\\": [
            {
              \\"name\\": \\"FunctionAugments\\",
              \\"children\\": {
                \\"Identifier\\": [
                  {
                    \\"image\\": \\"str\\",
                    \\"startOffset\\": 18,
                    \\"endOffset\\": 20,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 18,
                    \\"endColumn\\": 20,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ]
              }
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 21,
              \\"endOffset\\": 21,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 21,
              \\"endColumn\\": 21,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 23,
              \\"endOffset\\": 23,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 23,
              \\"endColumn\\": 23,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"Program\\": [
            {
              \\"name\\": \\"Program\\",
              \\"children\\": {
                \\"Assignment\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"RelationExpression\\": [
                                    {
                                      \\"name\\": \\"RelationExpression\\",
                                      \\"children\\": {
                                        \\"Expression\\": [
                                          {
                                            \\"name\\": \\"Expression\\",
                                            \\"children\\": {
                                              \\"Term\\": [
                                                {
                                                  \\"name\\": \\"Term\\",
                                                  \\"children\\": {
                                                    \\"Factor\\": [
                                                      {
                                                        \\"name\\": \\"Factor\\",
                                                        \\"children\\": {
                                                          \\"Identifier\\": [
                                                            {
                                                              \\"image\\": \\"str\\",
                                                              \\"startOffset\\": 31,
                                                              \\"endOffset\\": 33,
                                                              \\"startLine\\": 3,
                                                              \\"endLine\\": 3,
                                                              \\"startColumn\\": 7,
                                                              \\"endColumn\\": 9,
                                                              \\"tokenTypeIdx\\": 8,
                                                              \\"tokenType\\": {
                                                                \\"name\\": \\"Identifier\\",
                                                                \\"PATTERN\\": {},
                                                                \\"tokenTypeIdx\\": 8,
                                                                \\"CATEGORIES\\": [],
                                                                \\"categoryMatches\\": [],
                                                                \\"categoryMatchesMap\\": {},
                                                                \\"isParent\\": false
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"PipeToken\\": [
                                    {
                                      \\"image\\": \\"|>\\",
                                      \\"startOffset\\": 35,
                                      \\"endOffset\\": 36,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 11,
                                      \\"endColumn\\": 12,
                                      \\"tokenTypeIdx\\": 33,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"PipeToken\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 33,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ],
                                  \\"to\\": [
                                    {
                                      \\"image\\": \\"console\\",
                                      \\"startOffset\\": 38,
                                      \\"endOffset\\": 44,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 14,
                                      \\"endColumn\\": 20,
                                      \\"tokenTypeIdx\\": 8,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 8,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 50,
              \\"endOffset\\": 50,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
